--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,12 +12,20 @@ body{
 
 
 #header{
+    background-image: url(/Resources/backgrounds/h_img.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    color: #fff;
+    height: 97vh;
+    margin-bottom: 0;
+}
 
-    width: 100%;
-    height: 530px;
-    padding: 0;
-    top: 40%;
-    widows: 100%;
+
+
+
+.came{
+    text-align: center;
+    padding-top: 10%;
 }
 
 
@@ -30,11 +38,12 @@ body{
     text-align: center;
 }
 
-#services{
+#services {
     background-image: url(/Resources/backgrounds/s_image.jpg);
+    color: #fff;
     text-align: center;
-    margin-top: 10%;
-    background-repeat: no-repeat;
+    margin-top: 5%;
+    
 }
 #cont{
     background-image: url(/Resources/backgrounds/c_image.jpg);
