--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,7 +12,7 @@ body{
 
 
 #header{
-    background-image: url(/Resources/backgrounds/h_img.jpg);
+    background-image: url(../Resources/backgrounds/h_img.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: #fff;
@@ -37,16 +37,29 @@ body{
 #About{
     text-align: center;
 }
+.center{
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    background: white;
+    opacity: 0.55;
+    font-weight: bolder;
+}
+
 
 #services {
-    background-image: url(/Resources/backgrounds/s_image.jpg);
+    background-image: url(../Resources/backgrounds/s_image.jpg);
     color: #fff;
     text-align: center;
     margin-top: 5%;
     
 }
 #cont{
-    background-image: url(/Resources/backgrounds/c_image.jpg);
+    background-image: url(../Resources/backgrounds/c_image.jpg);
     height: 80vh;
     margin-top: 10%;
     background-repeat: no-repeat;
@@ -75,4 +88,12 @@ body h1{
 
 .row-icons{
     align-items: center;
+}
+
+}
+.show1,.show2,.show0{
+   display: none;
+}
+form{
+    opacity: 0.55;
 }
